--- a/WeatherMetricsWebAPI/appsettings.json
+++ b/WeatherMetricsWebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnection": "Server=HAL9000\\ORLANMON;Database=WeatherMetrics;Trusted_Connection=False; User ID=sa;Password=GoWestYoungMan_1973; TrustServerCertificate=True"
+    //"DBConnection": "Server=HAL9000\\ORLANMON;Database=WeatherMetrics;Trusted_Connection=False; User ID=sa;Password=GoWestYoungMan_1973; TrustServerCertificate=True",
+    "DBConnection": "Server=tcp:monacos-sql.database.windows.net,1433;Initial Catalog=WeatherMetricsData;Persist Security Info=False;User ID=orlanmon;Password=GoWestYoungMan_1973;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
   }
