Added CORS Logic

--- a/WeatherMetricsWebAPI/appsettings.json
+++ b/WeatherMetricsWebAPI/appsettings.json
@@ -11,5 +11,18 @@
     "DBConnection": "Server=tcp:monacos-sql.database.windows.net,1433;Initial Catalog=WeatherMetricsData;Persist Security Info=False;User ID=orlanmon;Password=GoWestYoungMan_1973;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
+  },
+  "CorsSettings": {
+    "SpecificOriginsPolicy": {
+      "AllowedOrigins": "http://localhost:4200;",
+      "AllowedHeaders": "Content-Type,Authorization",
+      "AllowedMethods": "GET,POST,PUT,DELETE",
+      "AllowCredentials": true
+    },
+    "AnyOriginPolicy": {
+      "AllowAnyOrigin": true,
+      "AllowedHeaders": "*",
+      "AllowedMethods": "*"
+    }
   }
 }
