CORS Revisions and Angular Updates

--- a/WeatherMetricsWebAPI/appsettings.json
+++ b/WeatherMetricsWebAPI/appsettings.json
@@ -16,7 +16,7 @@
     "SpecificOriginsPolicy": {
       "AllowedOrigins": "http://localhost:4200;",
       "AllowedHeaders": "Content-Type,Authorization",
-      "AllowedMethods": "GET,POST,PUT,DELETE",
+      "AllowedMethods": "GET,POST,PUT,DELETE,OPTIONS",
       "AllowCredentials": true
     },
     "AnyOriginPolicy": {
