--- a/WeatherMetricsWebAPI/appsettings.json
+++ b/WeatherMetricsWebAPI/appsettings.json
@@ -15,8 +15,8 @@
   "CorsSettings": {
     "SpecificOriginsPolicy": {
       "AllowedOrigins": "http://localhost:4200;",
-      "AllowedHeaders": "Content-Type,Authorization",
-      "AllowedMethods": "GET,POST,PUT,DELETE,OPTIONS",
+      "AllowedHeaders": "Content-Type;Authorization;",
+      "AllowedMethods": "GET;POST;PUT;DELETE;OPTIONS;",
       "AllowCredentials": true
     },
     "AnyOriginPolicy": {
