--- a/WeatherMetricsWeb/angular.json
+++ b/WeatherMetricsWeb/angular.json
@@ -23,7 +23,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "src/staticwebapp.config.json"
               }
             ],
             "styles": [
