Added new CORS Allowed Origins

--- a/WeatherMetricsWebAPI/appsettings.json
+++ b/WeatherMetricsWebAPI/appsettings.json
@@ -14,7 +14,7 @@
   },
   "CorsSettings": {
     "SpecificOriginsPolicy": {
-      "AllowedOrigins": "http://localhost:4200;",
+      "AllowedOrigins": "http://localhost:4200;https://orange-mud-03831390f.3.azurestaticapps.net/;",
       "AllowedHeaders": "Content-Type;Authorization;",
       "AllowedMethods": "GET;POST;PUT;DELETE;OPTIONS;",
       "AllowCredentials": true
